fix buttons overrided grey background color on Safari

--- a/client/styles/base/button.scss
+++ b/client/styles/base/button.scss
@@ -4,6 +4,7 @@ button {
   border: none;
   margin: 5px;
   cursor: pointer;
+  background-color: transparent;
 }
 
 .button--large {
