--- a/client/styles/elements/button.scss
+++ b/client/styles/elements/button.scss
@@ -91,9 +91,9 @@
     }
 }
 .submit {
-    background-color: hsla(103, 96%, 28%, 0.4);
-    border: 1px solid hsla(103, 96%, 28%, 0.2);
+    background-color: hsla(54, 93%, 47%, 0.5);
+    border: 1px solid hsla(54, 93%, 47%, 0.2);
 }
 .reset {
-    border: 1px solid hsla(103, 96%, 28%, 0.8);
+    border: 1px solid rgb(230, 207, 3);
 }
